# symphony

./: CMakeLists.txt  Makefile  generate.sh
cmake/: utils.cmake
examples/: echo_server.cc  echo_server_udp.cc  echo_udp_client.cc
samples/: my_http_server.cc
symphony/: address.cc  address.h  application.cc  application.h  bytearray.cc  bytearray.h  config.cc  config.h  daemon.cc  daemon.h  endian.h  env.cc  env.h  fd_manager.cc  fd_manager.h  fiber.cc  fiber.h  hook.cc  hook.h  iomanager.cc  iomanager.h  library.cc  library.h  log.cc  log.h  macro.h  main.cc  module.cc  module.h  mutex.cc  mutex.h  noncopyable.h  protocol.cc  protocol.h  scheduler.cc  scheduler.h  singleton.h  socket.cc  socket.h  stream.cc  (+17 more)
symphony/common/: config_file.cc  config_file.h  convert.cc  convert.h  func.cc  func.h  line.cc  line.h  math.cc  math.h  shared_memory.cc  shared_memory.h  socket.cc  socket.h  time.cc  time.h
symphony/db/: db.h  fox_thread.cc  fox_thread.h  mysql.cc  mysql.h  redis.cc  redis.h  sqlite3.cc  sqlite3.h
symphony/ds/: activity_data.h  array.h  avl_tree.h  bag_data.h  bitmap.cc  bitmap.h  cache_status.h  config_file.cc  config_file.h  copy_data.h  counter_data.h  dict.h  equip_data.h  friend_data.h  gem_data.h  global_data.h  guild_data.h  hash_map.h  hash_multimap.h  lru_cache.h  mail_data.h  mount_data.h  partner_data.h  pay_data.h  pet_data.h  roaring_bitmap.cc  roaring_bitmap.h  role_data.h  seal_data.h  server_define.h  skill_data.h  skill_struct.h  static_data.cc  static_data.h  static_struct.h  task_data.h  timed_cache.h  timed_lru_cache.h  timer_manager.cc  timer_manager.h  (+2 more)
symphony/email/: email.cc  email.h  smtp.cc  smtp.h
symphony/http/: http.cc  http.h  http11_parser.h  http11_parser.rl.cc  http_connection.cc  http_connection.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  httpclient_parser.rl.cc  servlet.cc  servlet.h  session_data.cc  session_data.h  ws_connection.cc  ws_connection.h  ws_server.cc  ws_server.h  ws_servlet.cc  ws_servlet.h  ws_session.cc  ws_session.h
symphony/http/servlets/: config_servlet.cc  config_servlet.h  status_servlet.cc  status_servlet.h
symphony/ns/: name_server_module.cc  name_server_module.h  ns_client.cc  ns_client.h  ns_protobuf.pb.cc  ns_protobuf.pb.h  ns_protobuf.proto  ns_protocol.cc  ns_protocol.h
symphony/orm/: column.cc  column.h  index.cc  index.h  orm.cc  table.cc  table.h  util.cc  util.h
symphony/proto/: game_define.pb.cc  game_define.pb.h  game_define.proto  log_protobuf.pb.cc  log_protobuf.pb.h  log_protobuf.proto  msg_account.pb.cc  msg_account.pb.h  msg_account.proto  msg_base.pb.cc  msg_base.pb.h  msg_base.proto  msg_copy.pb.cc  msg_copy.pb.h  msg_copy.proto  msg_game.pb.cc  msg_game.pb.h  msg_game.proto  msg_id.pb.cc  msg_id.pb.h  msg_id.proto  msg_login_clt_data.pb.cc  msg_login_clt_data.pb.h  msg_login_clt_data.proto  msg_login_db.pb.cc  msg_login_db.pb.h  msg_login_db.proto  msg_move.pb.cc  msg_move.pb.h  msg_move.proto  msg_payment.pb.cc  msg_payment.pb.h  msg_payment.proto  msg_ret_code.pb.cc  msg_ret_code.pb.h  msg_ret_code.proto  msg_role.pb.cc  msg_role.pb.h  msg_role.proto
symphony/rock/: rock_protocol.cc  rock_protocol.h  rock_server.cc  rock_server.h  rock_stream.cc  rock_stream.h
symphony/servers/account_server/: account_manager.cc  account_manager.h  account_server_module.cc  account_server_module.h  account_server_protocol.h  game_log_manager.cc  game_log_manager.h  log_struct.h
symphony/servers/center_server/: center_server_module.cc  center_server_module.h  logic_svr_manager.cc  logic_svr_manager.h
symphony/servers/db_server/: db_manager.cc  db_manager.h  db_server_module.cc  db_server_module.h  db_server_protocol.h
symphony/servers/log_server/: account_create_info.cc  account_create_info.h  account_login_info.cc  account_login_info.h  log_protobuf.pb.cc  log_protobuf.pb.h  log_protobuf.proto  log_server_module.cc  log_server_module.h  log_server_protocol.h  ls_client.cc  ls_client.h  role_chat_info.cc  role_chat_info.h  role_create_info.cc  role_create_info.h  role_login_info.cc  role_login_info.h  role_logout_info.cc  role_logout_info.h
symphony/servers/logic_server/: bag_module.cc  bag_module.h  copy_module.cc  copy_module.h  data_pool.cc  data_pool.h  game_log_manager.cc  game_log_manager.h  game_svr_manager.cc  game_svr_manager.h  global_data_manager.cc  global_data_manager.h  logic_server_module.cc  logic_server_module.h  login_code_manager.cc  login_code_manager.h  mail_manager.cc  mail_manager.h  mail_module.cc  mail_module.h  module_base.cc  module_base.h  msg_handler_manager.h  player_manager.cc  player_manager.h  player_object.cc  player_object.h  role_module.cc  role_module.h  simple_manager.cc  simple_manager.h
symphony/servers/login_server/: logic_svr_manager.cc  logic_svr_manager.h  login_client_manager.cc  login_client_manager.h  login_server_module.cc  login_server_module.h
symphony/streams/: async_socket_stream.cc  async_socket_stream.h  load_balance.cc  load_balance.h  service_discovery.cc  service_discovery.h  socket_stream.cc  socket_stream.h  zlib_stream.cc  zlib_stream.h
symphony/util/: crypto_util.cc  crypto_util.h  global_define.h  hash_util.cc  hash_util.h  json_util.cc  json_util.h  str_util.cc  str_util.h  time.cc  time.h
template/: CMakeLists.txt  move.sh
template/template/: my_module.cc  my_module.h
tests/: test.cc  test_address.cc  test_application.cc  test_array.cc  test_bitmap.cc  test_bytearray.cc  test_config.cc  test_crypto.cc  test_daemon.cc  test_dict.cc  test_email.cc  test_env.cc  test_fiber.cc  test_hashmap.cc  test_hashmultimap.cc  test_hook.cc  test_http.cc  test_http_connection.cc  test_http_parser.cc  test_http_server.cc  test_iomanager.cc  test_logserver.cc  test_lru.cc  test_module.cc  test_mysql.cc  test_nameserver.cc  test_orm.cc  test_rock.cc  test_scheduler.cc  test_service_discovery.cc  test_socket.cc  test_sqlite3.cc  test_tcp_server.cc  test_thread.cc  test_timed_cache.cc  test_timed_lru_cache.cc  test_uri.cc  test_util.cc  test_ws_client.cc  test_ws_server.cc  (+2 more)
(+2 files in other folders)
